fix busted alignment and add examples

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -4,18 +4,20 @@
 
 html {
   font-family: 'Roboto', sans-serif;
+  min-height: 100%;
 }
 
 body {
   margin: 0;
+  min-height: 100%;
 
   > main {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
 
     > div {
       width: 100%;
-      height: 100%;
+      min-height: 100%;
     }
   }
 }
