--- a/src/styles/views/about.scss
+++ b/src/styles/views/about.scss
@@ -13,7 +13,7 @@ div[data-react-view='about'] {
       padding: 5px;
       border: 1px solid $fg-grey;
       display: inline-block;
-      margin-right: 10px;
+      margin: 5px;
       text-decoration: none;
       color: black;
 
